objects/DynamicCodeDataStore__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>NOTE: The name field should be updated with caution as code may be referencing its value.  The email field should be a valid email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_255__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text_255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Used as a general dynamic data store for code to use as opposed to hard coding values</description>
    <label>Dynamic Code Data Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Text_255__c</columns>
        <columns>Profile__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
</CustomObject>